[package]
name = "type_cell"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

authors = ["Dekirisu <dekirisu@gmail.com>"]
description = "Attach single assignment cells to types using get/set methods."
keywords = ["static"]
categories = ["rust-patterns", "memory-management"]

repository = "https://github.com/dekirisu/type_cell"
documentation = "https://docs.rs/type_cell"

[dependencies]
once_cell = "1.18"
paste = "1.0"